box200 - row div

--- a/Práctica 02/IntegrationAttempt.html
+++ b/Práctica 02/IntegrationAttempt.html
@@ -264,6 +264,7 @@
 								<div class="box258green_middle_left"></div>
 								  <img src="images/thumb_yellow3.jpg">  Jogus 7
 								<div class="box258green_middle_right"></div>
+
 							</div>
 
 
@@ -312,9 +313,21 @@
 			</div>
 
 			<div class="box200brown_middle">
-				<div class="box200brown_middle_left"></div>
-						<img src="images/thumb_blue4.jpg">  Jogus 7
-				<div class="box200brown_middle_right"></div>
+				<div id="box_row">
+					<div class="box200brown_middle_left"></div>
+					<img src="images/thumb_blue4.jpg">  Jogus 11
+					<div class="box200brown_middle_right"></div>
+				</div>	
+				<div id="box_row">
+					<div class="box200brown_middle_left"></div>
+					<img src="images/thumb_pink1.jpg">  Jogus 12
+					<div class="box200brown_middle_right"></div>
+				</div>	
+				<div id="box_row">
+					<div class="box200brown_middle_left"></div>
+					<img src="images/thumb_blue5.jpg">  Jogus 13
+					<div class="box200brown_middle_right"></div>
+				</div>	
 			</div>
 
 
@@ -336,9 +349,22 @@
 			</div>
 
 			<div class="box200brown_middle">
-				<div class="box200brown_middle_left"></div>
-				<img src="images/thumb_black1.jpg">  Jogus 7
-				<div class="box200brown_middle_right"></div>
+				<div id="box_row">
+					<div class="box200brown_middle_left"></div>
+					<img src="images/thumb_gray1.jpg">  Jogus 11
+					<div class="box200brown_middle_right"></div>
+				</div>	
+				<div id="box_row">
+					<div class="box200brown_middle_left"></div>
+					<img src="images/thumb_black1.jpg">  Jogus 12
+					<div class="box200brown_middle_right"></div>
+				</div>	
+				<div id="box_row">
+					<div class="box200brown_middle_left"></div>
+					<img src="images/thumb_brown1.jpg">  Jogus 13
+					<div class="box200brown_middle_right"></div>
+				</div>	
+
 			</div>
 
 			<div class="box200brown_footer">
