Final Working Version
all css included in one file

--- a/Práctica 02/index02.html
+++ b/Práctica 02/index02.html
@@ -6,11 +6,11 @@
   	<title>LoremIpsum.com</title>
 
 	<link href="css/estilo02.css" rel="stylesheet" type="text/css">
-	<link href="css/spotlight.css" rel="stylesheet" type="text/css">
+
 
 </head>
 
-<body id="body_bg_img">
+<body> <!--id="body_bg_img"> -->
 
 	<div id="main_div">
 
@@ -268,7 +268,7 @@
     	</div>
 
     	<div class="under_ludere_vencire_text">
-			Nebulae
+			Nebulae Inis Supris Solaris
 		</div>
 
 
