--- a/Práctica 03/ejercicio 01/index03.html
+++ b/Práctica 03/ejercicio 01/index03.html
@@ -5,41 +5,41 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Form</title>
-<link href="formato.css" rel="stylesheet" type="text/css" />
+<link href="style03.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-<form name="form1" action="TEST.HTML" onsubmit="javascript:Validar()" method="post">
+<form name="form1" id="form1" action="alert('blah')"  method="post">
 <table width="358" height="450" border="5">
   <tr>
     <td height="446"><table width="355" height="356" border="0">
       <tr>
         <td width="145">Nombre:</td>
-        <td width="164"><input type="text" name="txtNombre" id="txtNombre" onblur="Mayuscula()" /></td>
+        <td width="164"><input type="text" name="name" id="name" onblur="toUp(this);" /></td>
       </tr>
       <tr>
         <td>Apellidos:</td>
-        <td><input type="text" name="txtApellidos" id="txtApellidos" onblur="Mayuscula()" /></td>
+        <td><input type="text" name="surname" id="surname" onblur="toUp(this);" /></td>
       </tr>
       <tr>
         <td>Edad:</td>
-        <td><input type="text" name="txtEdad" id="txtEdad" /></td>
+        <td><input type="text" name="age" id="age" /></td>
       </tr>
       <tr>
         <td>NIF:</td>
-        <td><input type="text" name="txtNIF" id="textfield17" /></td>
+        <td><input type="text" name="nif" id="nif" /></td>
       </tr>
       <tr>
         <td>E-mail:</td>
-        <td><input type="text" name="txtEmail" id="textfield16" /></td>
+        <td><input type="text" name="email" id="email" /></td>
       </tr>
       <tr>
         <td>Localidad:</td>
-        <td><input type="text" name="txtLocalidad" id="textfield15" /></td>
+        <td><input type="text" name="city" id="city" /></td>
       </tr>
       <tr>
         <td>Provincia:</td>
-        <td><select name="slcProvincia" required="required" id="Provincia" style="width:144px">
+        <td><select name="region" required="required" id="region" style="width:144px">
           <option selected="selected">Almería</option>
           <option>Cádiz</option>
           <option>Córdoba</option>
@@ -52,27 +52,27 @@
       </tr>
       <tr>
         <td>Fecha de Nacimiento:</td>
-        <td><input type="text" name="txtFechaNacimiento" id="textfield14" /></td>
+        <td><input type="text" name="dob" id="dob" /></td>
       </tr>
       <tr>
         <td>Teléfono:</td>
-        <td><input type="text" name="txtTelefono" id="textfield13" /></td>
+        <td><input type="text" name="phone" id="phone" /></td>
       </tr>
       <tr>
         <td>Fecha de Llegada:</td>
-        <td><input type="text" name="txtFechaLlegada" id="textfield12" /></td>
+        <td><input type="text" name="doa" id="doa" /></td>
       </tr>
       <tr>
         <td>Hora de Llegada:</td>
-        <td><input type="text" name="txtHoraLlegada" id="textfield11" /></td>
+        <td><input type="text" name="toa" id="toa" /></td>
       </tr>
       <tr>
         <td><input type="button" button="Limpiar" style="width:144px" id="btnLimpiar" value="Limpiar" /></td>
-        <td><input type="button" name="Enviar" style="width:144px" id="bntEnviar" value="Enviar" onclick="javascript:Validar()" /> </td>
+        <td><input type="button" name="Enviar" style="width:144px" id="bntEnviar" value="Enviar" onclick="javascript:validateAndSubmitForm()" /> </td>
       </tr>
     </table>
 
-<span id= "label"> draw </span>
+	<span id= "error_message">  </span>
     <p>&nbsp;</p></td>
 
   </tr>
