--- a/Práctica 03/ejercicio 01/index03.html
+++ b/Práctica 03/ejercicio 01/index03.html
@@ -15,31 +15,31 @@
     <td height="446"><table width="355" height="356" border="0">
       <tr>
         <td width="145">Nombre:</td>
-        <td width="164"><input type="text" name="name" id="name" onblur="toUp(this);" /></td>
+        <td width="164"><input type="text" name="Nombre" id="name" onblur="toUp(this);" /></td>
       </tr>
       <tr>
         <td>Apellidos:</td>
-        <td><input type="text" name="surname" id="surname" onblur="toUp(this);" /></td>
+        <td><input type="text" name="Apellidos" id="surname" onblur="toUp(this);" /></td>
       </tr>
       <tr>
         <td>Edad:</td>
-        <td><input type="text" name="age" id="age" /></td>
+        <td><input type="text" name="Edad" id="age" /></td>
       </tr>
       <tr>
         <td>NIF:</td>
-        <td><input type="text" name="nif" id="nif" /></td>
+        <td><input type="text" name="NIF" id="nif" /></td>
       </tr>
       <tr>
         <td>E-mail:</td>
-        <td><input type="text" name="email" id="email" /></td>
+        <td><input type="text" name="E-mail" id="email" /></td>
       </tr>
       <tr>
         <td>Localidad:</td>
-        <td><input type="text" name="city" id="city" /></td>
+        <td><input type="text" name="Localidad" id="city" /></td>
       </tr>
       <tr>
         <td>Provincia:</td>
-        <td><select name="region" required="required" id="region" style="width:144px">
+        <td><select name="Provincia" required="required" id="region" style="width:144px">
           <option selected="selected">Almería</option>
           <option>Cádiz</option>
           <option>Córdoba</option>
@@ -52,19 +52,19 @@
       </tr>
       <tr>
         <td>Fecha de Nacimiento:</td>
-        <td><input type="text" name="dob" id="dob" /></td>
+        <td><input type="text" name="Fecha de Nacimiento" id="dob" /></td>
       </tr>
       <tr>
         <td>Teléfono:</td>
-        <td><input type="text" name="phone" id="phone" /></td>
+        <td><input type="text" name="Teléfono" id="phone" /></td>
       </tr>
       <tr>
         <td>Fecha de Llegada:</td>
-        <td><input type="text" name="doa" id="doa" /></td>
+        <td><input type="text" name="Fecha de Llegada" id="doa" /></td>
       </tr>
       <tr>
         <td>Hora de Llegada:</td>
-        <td><input type="text" name="toa" id="toa" /></td>
+        <td><input type="text" name="Hora de Llegada" id="toa" /></td>
       </tr>
       <tr>
         <td><input type="button" button="Limpiar" style="width:144px" id="btnLimpiar" value="Limpiar" /></td>
