validation nearly finished

--- a/Práctica 03/ejercicio 01/index03.html
+++ b/Práctica 03/ejercicio 01/index03.html
@@ -55,19 +55,19 @@
       </tr>
       <tr>
         <td>Fecha de Nacimiento:</td>
-        <td><input type="text" name="Fecha de Nacimiento" id="dob"  /></td>
+        <td><input type="text" name="Fecha de Nacimiento" id="dob"  value="12/05/2013" /></td>
       </tr>
       <tr>
         <td>Teléfono:</td>
-        <td><input type="text" name="Teléfono" id="phone" /></td>
+        <td><input type="text" name="Teléfono" id="phone"  value="+33 0293939" /></td>
       </tr>
       <tr>
         <td>Fecha de Llegada:</td>
-        <td><input type="text" name="Fecha de Llegada" id="doa" /></td>
+        <td><input type="text" name="Fecha de Llegada" id="doa"  value="12/12/2013"/></td>
       </tr>
       <tr>
         <td>Hora de Llegada:</td>
-        <td><input type="text" name="Hora de Llegada" id="toa" /></td>
+        <td><input type="text" name="Hora de Llegada" id="toa" OnKeyUp="time_mask(this.value)" size="1"/></td>
       </tr>
       <tr>
         <td><input type="button" button="Limpiar" style="width:144px" id="btnLimpiar" value="Limpiar" /></td>
