--- a/Práctica 03/ejercicio 01/index03.html
+++ b/Práctica 03/ejercicio 01/index03.html
@@ -59,7 +59,7 @@
       </tr>
       <tr>
         <td>Teléfono:</td>
-        <td><input type="text" name="Teléfono" id="phone"  value="+33 0293939" /></td>
+        <td><input type="text" name="Teléfono" id="phone"  value="" OnKeyUp="phone_mask(this.value)"/></td>
       </tr>
       <tr>
         <td>Fecha de Llegada:</td>
