P03E01: Phone fixed / NIF validation
bug fixed phone validation and started Nif validation which has this
format: ?9999999-9

? = [KLMXYZ]
9 = [0-9]

--- a/Práctica 03/ejercicio 01/index03.html
+++ b/Práctica 03/ejercicio 01/index03.html
@@ -27,7 +27,7 @@
       </tr>
       <tr>
         <td>NIF:</td>
-        <td><input type="text" name="NIF" id="nif" value="12345678-R"/></td>
+        <td><input type="text" name="NIF" id="nif" value=""/></td>
       </tr>
       <tr>
         <td>E-mail:</td>
@@ -59,7 +59,7 @@
       </tr>
       <tr>
         <td>Teléfono:</td>
-        <td><input type="text" name="Teléfono" id="phone"  value="" OnKeyUp="phone_mask(this.value)"/></td>
+        <td><input type="text" name="Teléfono" id="phone"  value="929 99 29 11" OnKeyUp="phone_mask(this.value)"/></td>
       </tr>
       <tr>
         <td>Fecha de Llegada:</td>
