--- a/Práctica 03/ejercicio 02/index04.html
+++ b/Práctica 03/ejercicio 02/index04.html
@@ -10,70 +10,14 @@
 <body>
 	<div id="canvas" >
 
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-
-
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-
-
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-  	    <div class="canvas_cell" > </div>
-
 
 		<script>
 
 			var canvas = document.getElementById("canvas");
 
-			for (var i = 0; i<400;i++){
+			for (var i = 1; i<2501;i++){
 				var newdiv = document.createElement('div');
+				newdiv.innerHTML = ''+i;
 				var divIdName = 'div_'+i;
 				newdiv.setAttribute('id',divIdName);
 				newdiv.setAttribute('class','canvas_cell');
