P03E02: hints & new width

--- a/Práctica 03/ejercicio 02/index04.html
+++ b/Práctica 03/ejercicio 02/index04.html
@@ -10,7 +10,6 @@
 <body>
 	<div id="canvas" >
 
-
 		<script>
 
 			var canvas = document.getElementById("canvas");
@@ -27,6 +26,7 @@
 					var divIdName = row+""+col;
 					newdiv.setAttribute('id',divIdName);
 					newdiv.setAttribute('class','canvas_cell');
+					newdiv.setAttribute('TITLE',row+""+col);
 					canvas.appendChild(newdiv);
 				}
 			}
