P03E02: Colour Paletter Selection done

--- a/Práctica 03/ejercicio 02/index04.html
+++ b/Práctica 03/ejercicio 02/index04.html
@@ -7,18 +7,16 @@
 <title>Practica03 - Ejercicio02</title>
 <link href="style04.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
+<body style="background:Azure ;">
 
 
-<div id="container" >
+<div id="container" style="background:Azure ;">
 
 
-	<div id="palette" >
+	<div id="palette" style="background:Azure ;">
 
-		<div id="palette_colours"></div>
-		<div id="palette_label" >
-			desactivado
-		</div>
+		<div id="palette_colours" style="background:Azure ;"></div>
+		<div id="palette_label" style="background:Azure ;"><span id="colour_label"></span></div>
 	</div>
 
 	<div id="canvas" >
