--- a/Práctica 03/ejercicio 02/index04.html
+++ b/Práctica 03/ejercicio 02/index04.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<script type="text/javascript" src="lib.js"></script>
-
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Practica03 - Ejercicio02</title>
-<link href="style04.css" rel="stylesheet" type="text/css" />
+	<script type="text/javascript" src="lib.js"></script>
+	<title>Practica03 - Ejercicio02</title>
+	<link href="style04.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body style="background:Azure ;">
 
+	<div id="container" style="background:Azure ;">
+		<div id="palette" style="background:Azure ;">
+			<div id="palette_colours" style="background:Azure ;"></div>
+			<div id="palette_label" style="background:Azure ;"><span id="colour_label"></span></div>
+		</div>
 
-<div id="container" style="background:Azure ;">
 
 
-	<div id="palette" style="background:Azure ;">
-
-		<div id="palette_colours" style="background:Azure ;"></div>
-		<div id="palette_label" style="background:Azure ;"><span id="colour_label"></span></div>
+		<div id="canvas" ></div>
 	</div>
+	<script>buildColourPalette();</script>
+	<script>buildEmptyCanvas();</script>
 
-	<div id="canvas" >
-
-
-
-	<div>
-
-</div>
-
-<script>buildColourPalette();</script>
-<script>buildEmptyCanvas();</script>
 </body>
 </html>
