--- a/Práctica 03/ejercicio 01/index03.html
+++ b/Práctica 03/ejercicio 01/index03.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<script type="text/javascript" src="lib.js"></script>
+<script type="text/javascript" src="ejercicio3.js"></script>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Practica03 - Ejercicio01</title>
-<link href="style03.css" rel="stylesheet" type="text/css" />
+<link href="estilo03.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
