--- a/Práctica 03/ejercicio 02/index04.html
+++ b/Práctica 03/ejercicio 02/index04.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<script type="text/javascript" src="lib.js"></script>
+	<script type="text/javascript" src="ejercicio4.js"></script>
 	<title>Practica03 - Ejercicio02</title>
-	<link href="style04.css" rel="stylesheet" type="text/css" />
+	<link href="estilo04.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body style="background:Azure ;">
