--- a/Practica_04/index05.html
+++ b/Practica_04/index05.html
@@ -7,7 +7,7 @@
 			<frame name="head" src="top.php" scrolling=no>
 			<frameset cols="150,*" marginwidth="0" marginheight="0" frameborder="0" border="0" borderwidth="0">
 				<frame name="sidemenu" src="sidemenu.php" marginwidth=20>
-				<frame name="content" src="cover.php" marginwidth=20>
+				<frame name="content" src="list_regla.php" marginwidth=20>
 			</frameset>
 		</frameset>
 	</head>
